--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 </header>
 
 <nav>
-  <a href="#">Home</a>
-  <a href="#">Apply for Certificate</a>
-  <a href="#">Appointment Schedule</a>
-  <a href="#">About Us</a>
-  <a href="#">Contact Us</a>
+  <a href="index.html">Home</a>
+  <a href="application.html">Apply for Certificate</a>
+  <a href="schedule.html">Appointment Schedule</a>
+  <a href="about.html">About Us</a>
+  <a href="contact.html">Contact Us</a>
 </nav>
 
 <main>
@@ -92,4 +92,5 @@
 </footer>
 
 </body>
+
 </html>
