--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 </header>
 
 <nav>
-  <a href="index.html">Home</a>
-  <a href="application.html">Apply for Certificate</a>
-  <a href="schedule.html">Appointment Schedule</a>
-  <a href="about.html">About Us</a>
-  <a href="contact.html">Contact Us</a>
+  <a href=index.html>Home</a>
+  <a href=application.html>Apply for Certificate</a>
+  <a href=schedule.html>Appointment Schedule</a>
+  <a href=about.html>About Us</a>
+  <a href=contact.html>Contact Us</a>
 </nav>
 
 <main>
@@ -94,3 +94,4 @@
 </body>
 
 </html>
+
