--- a/application.html
+++ b/application.html
@@ -83,11 +83,11 @@
   </header>
 
   <nav>
-    <a href="index.html">Home</a>
-    <a href="application.html">Apply for Certificate</a>
-    <a href="appointment.html">Appointment Schedule</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact Us</a>
+    <a href=index.html>Home</a>
+    <a href=application.html>Apply for Certificate</a>
+    <a href=appointment.html>Appointment Schedule</a>
+    <a href=about.html>About Us</a>
+    <a href=contact.html>Contact Us</a>
   </nav>
 
   <main>
